--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,7 +1,7 @@
 <div class="row g-5 mb-5">
   <div class="col-md-12">
     {% if page.title == "Home" %}
-      <h3 class="fw-bold">Featured Publications</h3>
+      <h3 class="fw-bold text-xl-center">Featured Publications</h3>
       <ul>
         {% for item in site.data.publications.featured %}
         <li><span>{{ item.author }} ({{ item.year }}). {{ item.title }} </span><span class="fst-italic text-decoration-underline">{{ item.journal }} </span><span>{{ item.volume }}. </span><a class="two" href="{{ item.src }}">[pdf]</a><a class="two" href="{{ item.doi }}">[doi]</a></li>
