--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,14 +4,14 @@ layout: default
 
 <div class="row g-5 mb-5">
   <div class="col-md-12">
-    <h3 class="fw-bold">Our Vision</h3>
+    <h3 class="fw-bold text-xl-center">Our Vision</h3>
     {{ content }}
   </div>
 </div>
 
 <div class="row g-5 mb-5">
   <div class="col-md-12">
-    <h3 class="fw-bold">Research</h3>
+    <h3 class="fw-bold text-xl-center">Research</h3>
     <div class="col-md-6">
       <h6 class="fw-bold">Numerical schemes for multiscale computation</h6>
       <p>We develop efficient and accurate numerical schemes to reconstruct multiscale transport phenomena reliably.</p>
