--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
     <h3 class="fw-bold text-xl-center mb-3">Research</h3>
     <div class="col-md-6">
       <h6 class="fw-bold">Numerical schemes for multiscale computation</h6>
-      <p>We develop efficient and accurate numerical schemes to reconstruct multiscale transport phenomena reliably.</p>
+      <p>We develop efficient and accurate numerical schemes to reconstruct multiscale gas/phonon transport phenomena reliably.</p>
     </div>
     <div class="col-md-6"></div>
     <div class="col-md-6">
