--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@ layout: default
     </div>
     <div class="col-md-6"></div>
     <div class="col-md-6">
-      <h6 class="fw-bold">High-order discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
+      <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
     </div>
     <div class="col-md-6"></div>
 
