--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -47,7 +47,8 @@ a.two {
   overflow: hidden;
   background-color: $backgroundColor;
   /* commented for demo */
-  float: left;
+  float: right;
+  display:inline-block;
   margin-left: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
