--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -47,8 +47,7 @@ a.two {
   overflow: hidden;
   background-color: $backgroundColor;
   /* commented for demo */
-  float: right;
-  display:inline-block;
+  vertical-align: left;
   margin-left: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
