--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,6 +27,13 @@ layout: default
   </div>
 </div>
 
+<div class="grid-container">
+  <div class="grid-item">1</div>
+  <div class="grid-item">2</div>
+  <div class="grid-item">3</div>
+  <div class="grid-item">4</div>
+</div>
+
 
 {% include publications.html %}
 
