--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
     <h3 class="fw-bold text-xl-center mb-3">Research</h3>
     <div class="grid-container">
       <div class="grid-item">
-        <h6 class="fw-bold"><i class="fas fa-caret-right"></i>Numerical methods for multiscale computation</h6>
+        <h6 class="fw-bold">Numerical methods for multiscale computation</h6>
         We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
       </div>
       <div class="grid-item rect_image"><img src="/assets/img/HeatConduction.jpg"></div>
