--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,6 +28,12 @@ layout: default
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the kinetic/macroscopic moment solvers in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
       </div>
     </div>
+    <div class="grid-container">
+      <div class="grid-item">
+        <h6 class="fw-bold">Physics of rarefied gas dynamics/non-Fourier heat conduction</h6>
+        We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics/non-Fourier heat conduction encountered in emerging multiscale technologies such as lab-on-chip devises, carbon neutrality, next-generation vacciunes, micro air vehicles, and high-altitude flights.
+      </div>
+    </div>
 
     <p class="mt-2 fst-italic"><a class="two" href="/research">read full research topics</a></p>
   </div>
